changed placement of collapse button divs so they are put into center 'map' pane and positioning is done only via CSS. There is no longer a need to maintain the original width/height of the pane.
allow for a splitter to be used with panel. With the change to css
positioning, button stays at edge of pane while resizing.

added support for an optional top pane.

moved the right/bottom/top panes to config/viewer to demonstrate how
that is done.

--- a/viewer/css/main.css
+++ b/viewer/css/main.css
@@ -68,7 +68,7 @@ body, html {
     border-right: 1px solid #B5BCC7;
 }
 #sidebarRight {
-    width: 334px;
+    width: 200px;
     padding: 4px;
     margin: 0;
     overflow: auto;
@@ -76,16 +76,25 @@ body, html {
     border-left: 1px solid #B5BCC7;
 }
 #sidebarBottom {
-    height: 300px;
+    height: 100px;
     padding: 4px;
     margin: 0;
     overflow: auto;
     overflow-x: hidden;
     border-top: 1px solid #B5BCC7;
 }
+#sidebarTop {
+    height: 50px;
+    padding: 4px;
+    margin: 0;
+    overflow: auto;
+    overflow-x: hidden;
+    border-bottom: 1px solid #B5BCC7;
+}
 #mapCenter {
     padding: 0;
     overflow: hidden;
+    border-bottom: 1px solid #B5BCC7;
     background: url("../images/noisy_grid.png") #fff;
 }
 .HomeButton, .LocateButton {
@@ -98,49 +107,54 @@ body, html {
     margin-right: -1px;
 }
 .sidebarCollapseButton {
+    position: absolute;
+    z-index: 40;
+    background-color: white;
+    cursor: pointer;
+    color: #666666;
+    font-size: 1.3em;
+}
+.sidebarCollapseButtonHorz {
     width: 16px;
     height: 25px;
-    position: absolute;
-    top: 250px;
-    z-index: 40;
+    top: calc(50% - 12px);
     border-bottom: 1px solid #B5BCC7;
     border-top: 1px solid #B5BCC7;
-    background-color: white;
-    cursor: pointer;
-    color: #666666;
-    font-size: 1.3em;
 }
-.sidebarbottomCollapseButton {
+.sidebarCollapseButtonVert {
     width: 25px;
     height: 18px;
-    position: absolute;
-    left: 50%;
-    z-index: 40;
+    left: calc(50% - 12px);
     border-left: 1px solid #B5BCC7;
     border-right: 1px solid #B5BCC7;
-    background-color: white;
-    cursor: pointer;
-    color: #666666;
-    font-size: 1.3em;
 }
 .sidebarleftCollapseButton {
+    left: -1px;
     border-radius: 0 5px 5px 0;
     border-right: 1px solid #B5BCC7;
 }
-.sidebarbottomCollapseButton {
-    border-radius: 5px 5px 0 0;
-    border-top: 1px solid #B5BCC7;
-}
 .sidebarrightCollapseButton {
+    right: -1px;
     border-radius: 5px 0 0 5px;
     border-left: 1px solid #B5BCC7;
 }
-.sidebarCollapseButton .button {
-    padding-top: 3px;
+.sidebarbottomCollapseButton {
+    bottom: -1px;
+    border-radius: 5px 5px 0 0;
+    border-top: 1px solid #B5BCC7;
+}
+.sidebartopCollapseButton {
+    top: -1px;
+    border-radius: 0 0 5px 5px;
+    border-bottom: 1px solid #B5BCC7;
+}
+.sidebarCollapseButtonHorz .button {
+    padding-top: 2px;
     padding-left: 2px;
 }
-.sidebarbottomCollapseButton .button {
+.sidebarCollapseButtonVert .button {
     padding-left: 4px;
+    margin-top: -2px;
 }
 .sidebarleftCollapseButton .close:before {
     content: "\f053";
@@ -159,6 +173,12 @@ body, html {
 }
 .sidebarbottomCollapseButton .close:before {
     content: "\f078";
+}
+.sidebartopCollapseButton .open:before {
+    content: "\f078";
+}
+.sidebartopCollapseButton .close:before {
+    content: "\f077";
 }
 .floatingWidget_underlay {
     display: none
